// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Job /> should render properly for Errors 1`] = `
Array [
  <Breadcrumbs
    crumbs={
      Array [
        Object {
          "href": "/[projectId]/jobs",
          "title": "Job Queue",
        },
        Object {
          "href": false,
          "title": "Job Details",
        },
      ]
    }
  />,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 48px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-4 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-5 {
  color: #b3b3b3;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-17 {
  height: 100%;
  -webkit-flex: 3 0 auto;
  -ms-flex: 3 0 auto;
  flex: 3 0 auto;
  background-color: #009f22;
}

.emotion-17:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-17:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -4px;
  padding-right: 48px;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 200px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 4px;
  color: #ffffff;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited {
  background-color: #808080;
}

.emotion-1:hover {
  background-color: #b3b3b3;
}

.emotion-1[aria-disabled=true] {
  background-color: #808080;
}

<div>
    <h3
      className="emotion-0"
    >
      Job: 
      image_similarity.json
    </h3>
    <div
      className="emotion-22"
    >
      <div
        className="emotion-3"
      >
        <div
          className="emotion-2"
        >
          <button
            aria-label="Toggle Dropdown Menu"
            className="emotion-1"
            onBlur={[Function]}
            onClick={[Function]}
            type="button"
          >
            Modify Job
            <svg
              data-file-name="chevron.svg"
              height={20}
            />
          </button>
        </div>
      </div>
      <div
        className="emotion-6"
      >
        <div
          className="emotion-4"
        >
          ID
          :
        </div>
        <div
          className="emotion-5"
        >
          82d5308b-67c2-1433-8fef-0a580a000956
        </div>
      </div>
      <div
        className="emotion-6"
      >
        <div
          className="emotion-4"
        >
          Status
          :
        </div>
        <div
          className="emotion-5"
        >
          Paused
        </div>
      </div>
      <div
        className="emotion-6"
      >
        <div
          className="emotion-4"
        >
          Priority
          :
        </div>
        <div
          className="emotion-5"
        >
          100
        </div>
      </div>
      <div
        className="emotion-6"
      >
        <div
          className="emotion-4"
        >
          # Assets
          :
        </div>
        <div
          className="emotion-5"
        >
          4
        </div>
      </div>
      <div
        className="emotion-6"
      >
        <div
          className="emotion-4"
        >
          Progress
          :
        </div>
        <div
          className="emotion-5"
        >
          <div
            aria-label="Progress Bar"
            className="emotion-19"
            onKeyPress={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="emotion-18"
            >
              <div
                className="emotion-17"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Tasks
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/errors"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Errors
        </a>
      </li>
    </ul>
  </nav>,
  <TaskErrors
    parentUrl="/api/v1/projects/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/"
  />,
]
`;

exports[`<Job /> should render properly for Tasks 1`] = `
Array [
  <Breadcrumbs
    crumbs={
      Array [
        Object {
          "href": "/[projectId]/jobs",
          "title": "Job Queue",
        },
        Object {
          "href": false,
          "title": "Job Details",
        },
      ]
    }
  />,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 48px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-1 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-2 {
  color: #b3b3b3;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-14 {
  height: 100%;
  -webkit-flex: 3 0 auto;
  -ms-flex: 3 0 auto;
  flex: 3 0 auto;
  background-color: #009f22;
}

.emotion-14:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-14:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div>
    <h3
      className="emotion-0"
    >
      Job: 
      image_similarity.json
    </h3>
    <div
      className="emotion-19"
    >
      <div
        className="emotion-3"
      >
        <div
          className="emotion-1"
        >
          ID
          :
        </div>
        <div
          className="emotion-2"
        >
          82d5308b-67c2-1433-8fef-0a580a000956
        </div>
      </div>
      <div
        className="emotion-3"
      >
        <div
          className="emotion-1"
        >
          Status
          :
        </div>
        <div
          className="emotion-2"
        >
          Success
        </div>
      </div>
      <div
        className="emotion-3"
      >
        <div
          className="emotion-1"
        >
          Priority
          :
        </div>
        <div
          className="emotion-2"
        >
          100
        </div>
      </div>
      <div
        className="emotion-3"
      >
        <div
          className="emotion-1"
        >
          # Assets
          :
        </div>
        <div
          className="emotion-2"
        >
          4
        </div>
      </div>
      <div
        className="emotion-3"
      >
        <div
          className="emotion-1"
        >
          Progress
          :
        </div>
        <div
          className="emotion-2"
        >
          <div
            aria-label="Progress Bar"
            className="emotion-16"
            onKeyPress={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="emotion-15"
            >
              <div
                className="emotion-14"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Tasks
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/errors"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Errors
        </a>
      </li>
    </ul>
  </nav>,
  <JobTasks />,
]
`;
